post: fix table cell vertical alignment

--- a/src/ui/stylesheets/global.styl
+++ b/src/ui/stylesheets/global.styl
@@ -93,12 +93,13 @@ table
 	border-collapse collapse
 	font-size 12px
 	line-height 15px
-	margin-top 0.5em
+	margin-top 1em
 	white-space pre-wrap
 td
 th
 	padding 0
 	padding-right 2ch
+	vertical-align top
 
 // Media
 figure
